--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@
 
 # CLion trash files
 /.idea
-/cmake-build-debug
-
+*/cmake-build-debug/*
+*/cmake-build-release/*
+cmake-build-debug/
 cmake-build-release/
+
+# Build
+build/
