--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,16 @@
-cmake_minimum_required(VERSION 3.13)
-project(Duomenu_apdorojimas)
+project(code)
 
-set(CMAKE_CXX_STANDARD 14)
+set(SRC_FILES
+        ../source_vektoriai.cpp
+        ./classes/Student/Student.cpp
+        ./classes/Student/Student.h
+        ./classes/Timer/Timer.h
+        menu.cpp
+        menu.h
+        functions.cpp
+        functions.h
+        ./classes/Human/Human.cpp
+        ./classes/Human/Human.h
+        )
 
-add_executable(Duomenu_apdorojimas
-        source_vektoriai.cpp ./classes/Student/Student.cpp ./classes/Student/Student.h ./classes/Timer/Timer.h menu.cpp menu.h functions.cpp functions.h ../classes/Human/Human.cpp ../classes/Human/Human.h)
-
-add_executable(Duomenu_apdorojimas_masyvai
-        source_masyvai.cpp ./classes/Student/Student.cpp ./classes/Student/Student.h ./classes/Timer/Timer.h menu.cpp menu.h functions.cpp functions.h ../classes/Human/Human.cpp ../classes/Human/Human.h)
+add_library(src STATIC ${SRC_FILES})
